--- a/frontend/templates/layout.html
+++ b/frontend/templates/layout.html
@@ -153,27 +153,27 @@
         display: inline-block; 
         background-color: #FFFFFF; 
         color: #000000;          
-        padding: 15px 20px;      
-        border-radius: 30px;   
-        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5); 
+        padding: 5px 10px;      
+        border-radius: 999px;    
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
         font-weight: bold; 
         line-height: 1.5;
-        font-size: 1rem; 
+        font-size: 0.8rem; 
     ">
         
         <img src="{{ url_for('static', filename='images/logo-kkn.jpg') }}" 
              alt="Logo KKN" 
-             style="height: 30px; 
+             style="height: 25px; 
                     vertical-align: middle; 
-                    margin-right: 10px;"> 
+                    margin-right: 3px;"> 
         
-        KKN BINA DESA UNIVERSITAS HAMZANWADI 2025 — AIKMEL UTARA — PYLEARN AI 
+        KKN BINA DESA | UNIVERSITAS HAMZANWADI 2025 | AIKMEL UTARA | PYLEARN AI 
 
         <img src="{{ url_for('static', filename='images/logo uiversitas.jpg') }}" 
              alt="Logo Universitas" 
-             style="height: 30px;
+             style="height: 25px; 
                     vertical-align: middle; 
-                    margin-left: 10px;"> 
+                    margin-left: 3px;"> 
         
     </div>
 </footer>
