--- a/frontend/templates/admin_dashboard.html
+++ b/frontend/templates/admin_dashboard.html
@@ -131,10 +131,10 @@
                             </select>
                         </div>
 
-                        <div class="col-12 mb-3">
+                        <!-- <div class="col-12 mb-3">
                             <label class="form-label text-white mb-1">Poin</label>
                             <input name="question_points" type="number" class="form-control" value="10">
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="mb-3">
